receiver/force-app/main/receiver/objects/Asleep_user__c/Asleep_user__c.object-meta.xml
<CustomObject>
    <description>Active users of an organization at a certain moment</description>
    <label>Org user</label>
    <nameField>
        <label>Org user Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>