receiver/force-app/main/receiver/objects/Asleep_user__c/fields/BBVA_User__c.field-meta.xml
<CustomField>
    <fullName>BBVA_User__c</fullName>
    <description>Federation identifier field of original user object</description>
    <inlineHelpText>Federation identifier field of original user object</inlineHelpText>
    <label>BBVA User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>