receiver/force-app/main/receiver/objects/Asleep_user__c/fields/Created_on__c.field-meta.xml
<CustomField>
    <fullName>Created_on__c</fullName>
    <description>Date of creation of the user in the external org</description>
    <inlineHelpText>Date of creation of the user in the external org</inlineHelpText>
    <label>Created on</label>
    <type>Date</type>
</CustomField>