receiver/force-app/main/receiver/objects/Asleep_user__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email of the original user</description>
    <inlineHelpText>Email of the original user</inlineHelpText>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>