receiver/force-app/main/receiver/objects/Asleep_user__c/fields/Full_name__c.field-meta.xml
<CustomField>
    <fullName>Full_name__c</fullName>
    <label>Full name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>