receiver/force-app/main/receiver/objects/Asleep_user__c/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <label>Geography</label>
    <length>80</length>
    <type>Text</type>
</CustomField>