receiver/force-app/main/receiver/objects/Asleep_user__c/fields/Last_login__c.field-meta.xml
<CustomField>
    <fullName>Last_login__c</fullName>
    <description>Day in which the user last logged in</description>
    <inlineHelpText>Day in which the user last logged in</inlineHelpText>
    <label>Last login</label>
    <type>Date</type>
</CustomField>