receiver/force-app/main/receiver/objects/Asleep_user__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <description>Type of the license of the user</description>
    <inlineHelpText>Type of the license of the user</inlineHelpText>
    <label>License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>