receiver/force-app/main/receiver/objects/Asleep_user__c/fields/Permission_set_licenses__c.field-meta.xml
<CustomField>
    <fullName>Permission_set_licenses__c</fullName>
    <description>Permission set licenses assigned to user</description>
    <inlineHelpText>Permission set licenses assigned to user</inlineHelpText>
    <label>Permission set licenses</label>
    <length>31000</length>
    <type>LongTextArea</type>
</CustomField>