receiver/force-app/main/receiver/objects/Asleep_user__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <description>Profile of the user</description>
    <inlineHelpText>Profile of the user</inlineHelpText>
    <label>Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>