receiver/force-app/main/receiver/objects/Asleep_user__c/fields/Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Segmentation__c</fullName>
    <label>Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>