receiver/force-app/main/receiver/objects/Asleep_user__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the user</description>
    <inlineHelpText>Status of the user</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Asleep</fullName>
            </value>
            <value>
                <fullName>Never logged in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>