receiver/force-app/main/receiver/objects/Asleep_user__c/fields/Time_zone__c.field-meta.xml
<CustomField>
    <fullName>Time_zone__c</fullName>
    <description>Time zone of the user in the external org</description>
    <inlineHelpText>Time zone of the user in the external org</inlineHelpText>
    <label>Time zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>