receiver/force-app/main/receiver/objects/Asleep_user__c/fields/User_organization__c.field-meta.xml
<CustomField>
    <fullName>User_organization__c</fullName>
    <description>The organization that the user belongs to</description>
    <inlineHelpText>The organization that the user belongs to</inlineHelpText>
    <label>User organization</label>
    <referenceTo>Organization__c</referenceTo>
    <relationshipName>Asleep_users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>