receiver/force-app/main/receiver/objects/Asleep_user__c/fields/X1_day_login_count__c.field-meta.xml
<CustomField>
    <fullName>X1_day_login_count__c</fullName>
    <description>Number of times the user logged in in one day</description>
    <inlineHelpText>Number of times the user logged in in one day</inlineHelpText>
    <label>1 day login count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>