receiver/force-app/main/receiver/objects/Asleep_user__c/fields/X1_month_activity__c.field-meta.xml
<CustomField>
    <fullName>X1_month_activity__c</fullName>
    <description>This field represents literally the activity result of logins for 1 month (estimated through predetermined ranges)</description>
    <inlineHelpText>This field represents literally the activity result of logins for 1 month (estimated through predetermined ranges)</inlineHelpText>
    <label>1 month activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No activity</fullName>
            </value>
            <value>
                <fullName>Low activity</fullName>
            </value>
            <value>
                <fullName>Medium activity</fullName>
            </value>
            <value>
                <fullName>High activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>