receiver/force-app/main/receiver/objects/Asleep_user__c/fields/X1_month_login_count__c.field-meta.xml
<CustomField>
    <fullName>X1_month_login_count__c</fullName>
    <description>Number of times the user logged in one month</description>
    <inlineHelpText>Number of times the user logged in one month</inlineHelpText>
    <label>1 month login count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>