receiver/force-app/main/receiver/objects/Asleep_user__c/fields/X1_quarter_login_count__c.field-meta.xml
<CustomField>
    <fullName>X1_quarter_login_count__c</fullName>
    <description>Number of times the user logged in in one year&apos;s quarter</description>
    <inlineHelpText>Number of times the user logged in in one year&apos;s quarter</inlineHelpText>
    <label>1 quarter login count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>