receiver/force-app/main/receiver/objects/Asleep_user__c/fields/X2_weeks_login_count__c.field-meta.xml
<CustomField>
    <fullName>X2_weeks_login_count__c</fullName>
    <description>Number of times the user logged in in two weeks</description>
    <inlineHelpText>Number of times the user logged in in two weeks</inlineHelpText>
    <label>2 weeks login count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>