receiver/force-app/main/receiver/objects/Asleep_user__c/fields/X3_day_login_count__c.field-meta.xml
<CustomField>
    <fullName>X3_day_login_count__c</fullName>
    <description>Number of times the user logged in in three days</description>
    <inlineHelpText>Number of times the user logged in in three days</inlineHelpText>
    <label>3 day login count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>