receiver/force-app/main/receiver/objects/Asleep_user__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Full_name__c</columns>
    <columns>Last_login__c</columns>
    <columns>User_organization__c</columns>
    <columns>Username__c</columns>
    <columns>Status__c</columns>
    <columns>License__c</columns>
    <columns>Permission_set_licenses__c</columns>
    <columns>Profile__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>