receiver/force-app/main/receiver/objects/Asleep_user__c/listViews/Espana_Retail.listView-meta.xml
<ListView>
    <fullName>Espana_Retail</fullName>
    <columns>NAME</columns>
    <columns>eext__Status__c</columns>
    <columns>eext__Last_login__c</columns>
    <columns>eext__License__c</columns>
    <columns>eext__Profile__c</columns>
    <columns>eext__BBVA_User__c</columns>
    <columns>eext__Email__c</columns>
    <columns>eext__Username__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>eext__User_organization__c</field>
        <operation>equals</operation>
        <value>España Retail</value>
    </filters>
    <label>España Retail</label>
</ListView>